# nol-ticket-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/nol_ticket_bot/: __init__.py  browser.py  cli.py  config.py  monitor.py  purchase.py
tests/: test_monitor.py
